--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -31,8 +31,8 @@ main {
 }
 
 .section {
-    padding: 70px 0;
-    border-top: 1px solid #ccc;
+    padding-top: 70px;
+    border-top: 1px solid rgb(37, 118, 232);
 }
 
 .container {
@@ -80,6 +80,7 @@ main {
     border-radius: 7px;  
     cursor: pointer;
     border: 1px solid rgb(37, 118, 232);
+    background-color: rgba(128, 128, 128, 0.327);
     color: rgb(37, 118, 232);
   }
   
@@ -100,6 +101,7 @@ main {
     display: flex;  
     flex-wrap: wrap;
     align-items: center;
+    margin-bottom: 50px;
   }
   
   .container .profile-data .info .data{
@@ -158,6 +160,8 @@ main {
   .container .profile-data .repositories h2{
     margin-bottom: 30px;
     text-align: center;
+    color: rgb(37, 118, 232);
+    font-size: 35px;
   }
   
   .container .profile-data .repositories ul{
@@ -168,16 +172,17 @@ main {
   }
   
   .container .profile-data .repositories ul li a{
-    padding: 20px;
-    border: 1px solid grey;  
+    padding: 10px;
+    border: 1px solid rgb(37, 118, 232);  
     margin: 20px;
     display: block;
     border-radius: 7px;
     transition: 0.3s ease-in-out;
+    color: rgb(37, 118, 232);
   }
   
   .container .profile-data .repositories ul li a:hover{
-    background-color:hotpink;
+    background-color:rgb(37, 118, 232);
     color: #fff
   }
   
