--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -125,7 +125,7 @@ main {
   .container .profile-data .info p{
     font-size: 15px;  
     font-weight: 400;
-    line-height: 23px;
+    line-height: 25px;
   }
   
   .container .profile-data .counters{
@@ -138,6 +138,9 @@ main {
   
   .container .profile-data .counters h4{
     margin-bottom: 30px;
+    color: rgb(37, 118, 232);
+    font-size: 25px;
+    font-weight: 700;
   }
   
   .container .profile-data .counters span{
@@ -149,11 +152,11 @@ main {
   }
   
   .container .profile-data .counters .followers span{
-    background-color: hotpink;
+    background-color: rgb(37, 118, 232);
   }
   
   .container .profile-data .counters .following span{
-    background-color: purple;
+    background-color: rgb(37, 118, 232);
   }
   
   /* REPOSITÓRIOS */
@@ -168,7 +171,6 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    text-align: left;
   }
   
   .container .profile-data .repositories ul li a{
@@ -179,6 +181,7 @@ main {
     border-radius: 7px;
     transition: 0.3s ease-in-out;
     color: rgb(37, 118, 232);
+    
   }
   
   .container .profile-data .repositories ul li a:hover{
@@ -196,7 +199,7 @@ main {
     display: inline-block;
     font-style: normal;
     padding: 5px;
-    background-color: slateblue;
+    background-color: rgb(37, 118, 232);
     color: white;
     border-radius: 5px;  
   }
