--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -90,7 +90,7 @@ main {
     border-color: #ffffff;
   }
   
-  .container .profile-data{
+  .container .profile-data {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -104,31 +104,31 @@ main {
     margin-bottom: 50px;
   }
   
-  .container .profile-data .info .data{
+  .container .profile-data .info .data {
     padding: 40px;
     width: 50%;
   }
   
-  .container .profile-data .info img{
+  .container .profile-data .info img {
     width: 50%;
     border-radius: 50%;
     border: 10px solid rgb(37, 118, 232);
   }
   
-  .container .profile-data .info h1{
+  .container .profile-data .info h1 {
     font-size: 30px;
     margin-bottom: 20px;
     font-weight: 700;
     color: rgb(37, 118, 232);
   }
   
-  .container .profile-data .info p{
+  .container .profile-data .info p {
     font-size: 15px;  
     font-weight: 400;
     line-height: 25px;
   }
   
-  .container .profile-data .counters{
+  .container .profile-data .counters {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -136,14 +136,14 @@ main {
     margin-top: 70px;  
   }
   
-  .container .profile-data .counters h4{
+  .container .profile-data .counters h4 {
     margin-bottom: 30px;
     color: rgb(37, 118, 232);
     font-size: 25px;
     font-weight: 700;
   }
   
-  .container .profile-data .counters span{
+  .container .profile-data .counters span {
     color: white;
     padding: 15px;
     border-radius: 50%;
@@ -151,29 +151,29 @@ main {
     display: block;
   }
   
-  .container .profile-data .counters .followers span{
+  .container .profile-data .counters .followers span {
     background-color: rgb(37, 118, 232);
   }
   
-  .container .profile-data .counters .following span{
+  .container .profile-data .counters .following span {
     background-color: rgb(37, 118, 232);
   }
   
   /* REPOSITÓRIOS */
-  .container .profile-data .repositories h2{
+  .container .profile-data .repositories h2 {
     margin-bottom: 30px;
     text-align: center;
     color: rgb(37, 118, 232);
     font-size: 35px;
   }
   
-  .container .profile-data .repositories ul{
+  .container .profile-data .repositories ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
   }
   
-  .container .profile-data .repositories ul li a{
+  .container .profile-data .repositories ul li a {
     padding: 10px;
     border: 1px solid rgb(37, 118, 232);  
     margin: 20px;
@@ -184,34 +184,35 @@ main {
     
   }
   
-  .container .profile-data .repositories ul li a:hover{
+  .container .profile-data .repositories ul li a:hover {
     background-color:rgb(37, 118, 232);
-    color: #fff
+    color: #fff;
   }
   
-  .container .profile-data .repositories ul li a h4{
+  .container .profile-data .repositories ul li a h4 { 
     font-weight: 700;
     margin-bottom: 10px;
     text-transform: uppercase;
   }
   
-  .container .profile-data .repositories ul li a i{
+  .container .profile-data .repositories ul li a i {
     display: inline-block;
     font-style: normal;
     padding: 5px;
     background-color: rgb(37, 118, 232);
     color: white;
-    border-radius: 5px;  
+    border-radius: 5px;
+    border: 1px solid #fff;
   }
   
   /* EVENTOS */
-  .container .profile-data .events ul{
+  .container .profile-data .events ul {
     display: flex;
     flex-wrap: wrap;
     text-align: left;
   }
   
-  .container .profile-data .events h2{
+  .container .profile-data .events h2 {
     margin-bottom: 30px;
     text-align: center;
   }
@@ -221,15 +222,15 @@ main {
     margin: 5px 0;
   }
   
-  .container .profile-data .events ul li strong{
+  .container .profile-data .events ul li strong {
     font-weight: 700;
   }
   
   .container .profile-data .events ul li h4,
-  .container .profile-data .events ul li p{
+  .container .profile-data .events ul li p {
     margin-bottom: 10px;
   }
   
-  .container .profile-data.hide{
+  .container .profile-data.hide {
     display: none;
   }
